# Physics-Assistant

./: .env.development  .env.production  .env.staging  CLAUDE.md  DEPLOYMENT_README.md  DOCKER_DEPLOYMENT_GUIDE.md  PHASE_5_4_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  docker-compose.development.yml  docker-compose.prod.yml  docker-compose.production-optimized.yml  docker-compose.production.yml  docker-compose.yaml
Docker/: Dockerfile  README.md
UI/: Deliverable.md  README.md  STUDENT_MANAGEMENT.md  add_student.py  memory.md  start_api.py  start_system.py  start_ui.py  stop_system.py  stop_system_simple.py  test_double_question.py  working_with_claude.md
UI/api/: RAG_INTEGRATION_GUIDE.md  RAG_INTEGRATION_SUMMARY.md  agent.py  main.py  pyproject.toml  rag_client.py  rag_config.json  rag_config.py  test_rag_integration.py  validate_rag_integration.py
UI/api/langchain_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
UI/api/prompts/: angular_motion_agent_prompt.py  energy_agent_prompt.py  force_agent_prompt.py  math_agent_prompt.py
agents/: README.md  agent.py  pyproject.toml
agents/prompts/: kinematics_agent_prompt.py  math_agent_prompt.py  momentum_agent_prompt.py
backup/: backup-system-deployment.md  deploy-backup-system.sh  docker-compose.backup.yml
dashboard-ui/: DASHBOARD_README.md  package-lock.json  package.json
database/: .env  .env.example  DASHBOARD_API_DOCUMENTATION.md  (+31 more)
mcp_tools/: README.md  problems.md  pyproject.toml
mcp_tools/physics_mcp_tools/: __init__.py  angular_motion_mcp_server.py  angular_motion_utils.py  circuit_mcp_server.py  energy_mcp_server.py  energy_utils.py  forces_mcp_server.py  forces_utils.py  kinematics_mcp_server.py  kinematics_utils.py  math_mcp_server.py  math_utils.py  momentum_mcp_server.py  momentum_utils.py
(+240 files in other folders)
