[project]
name = "langchain-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langchain[anthropic,ollama,openai]>=0.3.25",
    "langgraph>=0.4.8",
]
