[project]
name = "physics_mcp_tools"
version = "0.1.0"
description = "MCP tools for physics calculations and analysis (forces, kinematics, circuits)"
authors = [
    {name = "Asli Tandogan Kunkel", email = "doogers@uconn.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
keywords = ["physics", "forces", "kinematics", "circuits", "mcp", "education"]

dependencies = [
    "fastmcp>=1.0.0",
    "mcp[cli]>=1.5.0", 
    "click>=8.1.8",
    "uvicorn>=0.34.3",
    "pydantic>=2.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

# Main CLI entry point
[project.scripts]
physics-mcp = "physics_mcp_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
